# so-scrapper

./: .gitignore  README.md  pyproject.toml
analysis/: analysis.ipynb  scripts.py
console_scripts/: scrapper.py
so_scrapper/: arg_parser.py  get_trends.py  main.py  question.py
so_scrapper/saves/: db.py  mongo.py  ptdf.py  save.py  sql_alchemy.py
so_scrapper/scrappers/: api.py  bs4.py  question.py  scrapper.py
tests/: scrappers.py
