[tool.poetry]
name = "so-scrapper"
version = "0.1.0"
description = ""
authors = ["hugo-andriamaromanana <hugo.andriamaromanana@laplateforme.io>"]
readme = "README.md"
packages = [
    { include = "so_scrapper", from = "." },
    { include = "console_scripts", from = "." },
]


[tool.poetry.scripts]
so-scrapper = "console_scripts.scrapper:main"

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
loguru = "^0.7.2"
requests = "^2.32.3"
pydantic = "^2.8.2"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
icecream = "*"

[tool.poetry.group.ci.dependencies]
black = { version = "*", allow-prereleases = true }
isort = "*"
ruff = "*"
mypy = "*"
# Stubs
types-toml = "*"
pandas-stubs = "*"
types-pyyaml = "*"

[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["docs", "archive"]
lint.select = ["E", "F", "W", "C90", "I", "D", "UP", "PD", "PL"]
lint.ignore = ["D104", "D107", "D205", "D415"]
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 8
lint.mccabe.max-complexity = 5

[tool.mypy]
files = ["so_scrapper", "console_scripts"]
strict = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls = false


[[tool.mypy.overrides]]
module = [
    "smart_open.*",
    "icecream.*",
]
ignore_missing_imports = true